# StepikPro

./: .gitignore  pyproject.toml
OOP/module2/: chapter1.py
OOP/module4/: chapter3.py  chapter5.py  chapter6.py  chapter7.py  chapter8.py
OOP/module5/: chapter1.py  chapter10.py  chapter2.py  chapter3.py  chapter4.py  chapter5.py  chapter8.py  chapter9.py
OOP/module6/: chapter1.py  chapter2.py  chapter3.py  chapter5.py  chapter6.py  chapter8.py
Pro/module10/: chapter10.py  (+4 more)
module10/: chapter12.py  chapter2.py  chapter5.py  chapter6.py
module11/: chapter6.py
module3/: condition.py  day_count.py  days_count_full.py  employees3.py  fill_up_missing_dates.py  get_all_mondays.py  get_days_in_month.py  get_range_data.py  is_available_date.py  is_correct.py  leap_year.py  neighboring_dates.py  rep.py  seconds.py  sort_data.py  weekday.py
module4/: best_sized_file.py  chess_is_better.py  easierThanItSeems.py  exam_results.py  exams.py  extract_this.py  favorits.py  no_comments.py  playgrounds.py  pools.py  popular_domens.py  python_rel.py  reverse_order.py  sales.py  service_food.py  sort_by_column.py  starving_studen.py  statistics_lesson.py  students.py  students_count.py  wifi_moscow.py  zipfiles.py
module6/: problem12.py  problem13.py  problem15.py  problem16.py  problem7.py
module7/: problem1.py  problem10.py  problem2.py  problem3.py  problem4.py  problem8.py  problem9.py
module8/: chapter4.py  problem2.py  problem4.py  problem5.py  problem7.py  problem8.py  recursion_sum.py
module9/: chapter2.py  chapter4.py  chapter9.py
tests/: test_main.py
(+76 files in other folders)
